--- a/src/pages/Blog/Blog.scss
+++ b/src/pages/Blog/Blog.scss
@@ -2,23 +2,10 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
-// .blog {
-//   width: 100%;
-//   border-bottom: 1px solid #b3b3b3;
-// }
-.coffe-news {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", sans-serif;
 }
 .blog_ul {
   display: flex;
-  @media (max-width: 375px) {
-    margin-left: 20px;
-  }
-}
-.blog_ul > li {
-  @media (max-width: 375px) {
-    font-size: 12px;
-  }
 }
 .switch_btn {
   margin: 30px 0 65px;
@@ -27,15 +14,9 @@
   justify-content: space-between;
   display: flex;
   align-items: center;
-  gap: 20px;
-  @media (max-width: 375px) {
-    flex-direction: column;
-  }
-}
-.blog-below-btns {
-  @media (max-width: 375px) {
+  @media(max-width: 375){
+    width: 300px;
     display: flex;
-    gap: 18px;
   }
 }
 .btn_switch {
@@ -47,12 +28,11 @@
   color: #f9b300;
   cursor: pointer;
   @media (max-width: 375px) {
-    width: 340px;
-    margin-bottom: -5px;
+    width: 1584px;
+    
   }
 }
 .btn_switchnews {
-  transform: translateX(-20px);
   width: 380px;
   height: 41px;
   border: 0.709034px solid #c9c9c9;
@@ -60,9 +40,8 @@
   color: #f9b300;
   cursor: pointer;
   @media (max-width: 375px) {
-    width: 160px;
-    transform: none;
-  }
+    width: 1200px;
+}
 }
 .btn_switchches {
   width: 380px;
@@ -72,9 +51,6 @@
   border-radius: 4px;
   color: #f9b300;
   cursor: pointer;
-  @media (max-width: 375px) {
-    width: 160px;
-  }
 }
 .text_centerh1 {
   width: 559px;
@@ -111,7 +87,7 @@
     margin-top: 6px;
   }
 }
-.forref {
+.forref{
   transform: translateY(-100px);
 }
 .text_infop {
@@ -155,28 +131,12 @@
   width: 100%;
   border: 2px;
 }
-
-.tag-btns-row-ad {
-  @media (max-width: 375px) {
-    margin-top: 25px;
-    min-width: 250px;
-    overflow: hidden;
-    overflow-x: scroll;
-  }
-}
 .button_tag {
   display: flex;
   justify-content: right;
   align-items: center;
   gap: 20px;
   margin-top: -30px;
-  @media (max-width: 375px) {
-    margin-top: 25px;
-    margin-left: 15px;
-    min-width: 625px;
-    overflow: hidden;
-    overflow-x: scroll;
-  }
 }
 
 .button_numb {
@@ -186,8 +146,15 @@
   border: 0.709034px solid #f9b300;
   border-radius: 4px;
   color: #f9b300;
-  @media (max-width: 375px) {
-    width: 700px;
+  @media (max-width: 379px) {
+    width: 160px;
+    height: 30px;
+    border: 1px solid #F9B300;
+    border-radius: 5px;
+    margin-top: 50px;
+    margin-right: 199px;
+    margin-top: 50px;
+    
   }
 }
 .button_numbtwo {
@@ -197,68 +164,47 @@
   border: 0.709034px solid #c9c9c9;
   border-radius: 4px;
   color: #f9b300;
-  @media (max-width: 375px) {
-    width: 700px;
+  @media (max-width: 383px) {
+    width: 160px;
+    height: 30px;
+    border: 1px solid #C9C9C9;
+    border-radius: 5px;
+    
   }
 }
-.button_numbtag3 {
-  width: 180px;
-  height: 31px;
-  background: #f7f7f7;
-  border: 0.709034px solid #c9c9c9;
-  border-radius: 4px;
-  color: #f9b300;
-  @media (max-width: 375px) {
-    width: 700px;
-  }
+.pmnsh{
+  width: 130px;
+  height: 134px;
 }
-.button_numbtag4 {
-  width: 180px;
-  height: 31px;
-  background: #f7f7f7;
-  border: 0.709034px solid #c9c9c9;
-  border-radius: 4px;
-  color: #f9b300;
-  @media (max-width: 375px) {
-    width: 700px;
-  }
-}
-.button_numbtag5 {
-  width: 180px;
-  height: 31px;
-  background: #f7f7f7;
-  border: 0.709034px solid #c9c9c9;
-  border-radius: 4px;
-  color: #f9b300;
-  @media (max-width: 375px) {
-    width: 700px;
-  }
-}
+// .button_numbtag3 {
+//   width: 180px;
+//   height: 31px;
+//   background: #f7f7f7;
+//   border: 0.709034px solid #c9c9c9;
+//   border-radius: 4px;
+//   color: #f9b300;
+// }
+// .button_numbtag4 {
+//   width: 180px;
+//   height: 31px;
+//   background: #f7f7f7;
+//   border: 0.709034px solid #c9c9c9;
+//   border-radius: 4px;
+//   color: #f9b300;
+// }
+// .button_numbtag5 {
+//   width: 180px;
+//   height: 31px;
+//   background: #f7f7f7;
+//   border: 0.709034px solid #c9c9c9;
+//   border-radius: 4px;
+//   color: #f9b300;
+// }
 .ul_news {
   display: flex;
 }
 .post-card {
   display: flex;
-  @media (max-width: 375px) {
-    display: inline;
-  }
-}
-.post-img > img {
-  @media (max-width: 375px) {
-    width: 333px;
-    height: 140px;
-    transform: translateX(10px);
-    margin-top: 10px;
-  }
-}
-.cards-row-blog {
-  @media (max-width: 375px) {
-    display: flex;
-    gap: 15px;
-    width: 366px;
-    overflow: hidden;
-    overflow-x: scroll;
-  }
 }
 .post-left {
   transform: translateX(10px);
@@ -271,18 +217,16 @@
   box-shadow: 0px 0px 21.2553px rgba(146, 146, 146, 0.2);
   border-radius: 14px;
   margin-top: 44px;
-  @media (max-width: 378px) {
-    width: 328px;
-    height: 400px;
-    padding: 40px;
-    transform: translate(27px, -47px);
+  @media (max-width:378px) {
+    width: 340px;
+    height: 403px;
   }
 }
 .post-right-h2 {
   width: 574px;
   height: 23px;
   margin-bottom: 40px;
-  @media (max-width: 379px) {
+  @media (max-width:379px) {
     width: 270px;
     height: 42px;
     font-size: 16px;
@@ -292,10 +236,6 @@
 .post-right > p {
   width: 582px;
   height: 73px;
-  @media (max-width: 375px) {
-    width: 280px;
-    padding-bottom: 112px;
-  }
 }
 .post-right > a {
   color: #f9b300;
@@ -343,11 +283,6 @@
   text-align: center;
   align-items: center;
   margin-top: 40px;
-  cursor: pointer;
-  @media (max-width: 375px) {
-    width: 340px;
-    margin-left: 20px;
-  }
 }
 .linia_span {
   width: 100%;
@@ -355,25 +290,16 @@
   border-bottom: 1px solid black;
   margin-top: 80px;
 }
-.FAQ {
-  height: 500px;
-}
 .faq_ac {
   width: 237px;
   height: 35px;
   font-family: "Gilroy";
   font-size: 28px;
   margin: 70px 1026px 13px 86px;
-  @media (max-width: 375px) {
-    transform: translateX(-74px);
-  }
 }
 .faq_img {
   width: 688px;
   height: 546px;
-  @media (max-width: 375px) {
-    display: none;
-  }
 }
 //////accordion
 // / @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap");
@@ -398,11 +324,6 @@
   outline: none;
   transition: background-color 0.6s ease;
   border-radius: 14px;
-  @media (max-width: 375px) {
-    margin-left: 320px;
-    width: 340px;
-    height: 80px;
-  }
 }
 
 .accordion:hover,
@@ -441,31 +362,28 @@
   background: #ffffff;
   box-shadow: 0px 0px 21.271px rgba(149, 149, 149, 0.25);
   border-radius: 14px;
-  @media (max-width: 375px) {
-    padding-left: 338px;
-  }
 }
 .accordion_faq {
   display: grid;
   justify-content: right;
   transform: translateY(-452px);
-  @media (max-width: 375px) {
-    padding-top: 50px;
-  }
+  // width: 1200px;
+  // height: 21px;
 }
-.company {
-  width: 121px;
-  height: 36px;
-  font-family: "Gilroy";
-  font-style: normal;
-  font-weight: 900;
-  font-size: 28px;
-  line-height: 35px;
-  @media (max-width: 382px) {
-    width: 235px;
-    height: 22px;
-    font-size: 18px;
-    line-height: 22px;
-    margin-left: 18px;
+.company{
+    width: 121px;
+    height: 36px;
+    font-family: 'Gilroy';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 28px;
+    line-height: 35px;
+    @media (max-width: 382px) {
+      width: 235px;
+      height: 22px;
+      font-size: 18px;
+      line-height: 22px;
+      margin-left: 18px;
+      
   }
 }
