fix: coffee fiters

--- a/src/pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss
+++ b/src/pages/Catalog/Coffee/Coffee-Filters/Coffee-Filters.scss
@@ -275,6 +275,9 @@
   .fiveCoffees > div > img {
     max-width: 17px;
   }
+  .filters-bottom-blocks-item:hover{
+    background-color: white;
+  }
 }
 .useFilter-btns {
   display: flex;
