--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -73,3 +73,4 @@ body {
 @import "../pages/Cart/Cart.scss";
 @import "../pages/Cart/CartEmpty.scss";
 @import "../Layout/Header/BurgerMenu.scss";
+@import "../pages/Rewievs/Rewievs.scss";
