fixed: accardion styles: coffe_news: 1860px

--- a/src/pages/Blog/Blog.scss
+++ b/src/pages/Blog/Blog.scss
@@ -7,7 +7,8 @@
 //   width: 100%;
 //   border-bottom: 1px solid #b3b3b3;
 // }
-.coffe-news {
+.coffe_news {
+  height: 1860px;
 }
 .blog_ul {
   display: flex;
