--- a/src/pages/Blog/Blog.scss
+++ b/src/pages/Blog/Blog.scss
@@ -14,7 +14,7 @@
   justify-content: space-between;
   display: flex;
   align-items: center;
-  @media(max-width: 375){
+  @media (max-width: 375) {
     width: 300px;
     display: flex;
   }
@@ -29,7 +29,6 @@
   cursor: pointer;
   @media (max-width: 375px) {
     width: 1584px;
-    
   }
 }
 .btn_switchnews {
@@ -41,7 +40,7 @@
   cursor: pointer;
   @media (max-width: 375px) {
     width: 1200px;
-}
+  }
 }
 .btn_switchches {
   width: 380px;
@@ -87,7 +86,7 @@
     margin-top: 6px;
   }
 }
-.forref{
+.forref {
   transform: translateY(-100px);
 }
 .text_infop {
@@ -149,12 +148,11 @@
   @media (max-width: 379px) {
     width: 160px;
     height: 30px;
-    border: 1px solid #F9B300;
+    border: 1px solid #f9b300;
     border-radius: 5px;
     margin-top: 50px;
     margin-right: 199px;
     margin-top: 50px;
-    
   }
 }
 .button_numbtwo {
@@ -167,12 +165,11 @@
   @media (max-width: 383px) {
     width: 160px;
     height: 30px;
-    border: 1px solid #C9C9C9;
+    border: 1px solid #c9c9c9;
     border-radius: 5px;
-    
   }
 }
-.pmnsh{
+.pmnsh {
   width: 130px;
   height: 134px;
 }
@@ -217,7 +214,7 @@
   box-shadow: 0px 0px 21.2553px rgba(146, 146, 146, 0.2);
   border-radius: 14px;
   margin-top: 44px;
-  @media (max-width:378px) {
+  @media (max-width: 378px) {
     width: 340px;
     height: 403px;
   }
@@ -226,7 +223,7 @@
   width: 574px;
   height: 23px;
   margin-bottom: 40px;
-  @media (max-width:379px) {
+  @media (max-width: 379px) {
     width: 270px;
     height: 42px;
     font-size: 16px;
@@ -370,20 +367,19 @@
   // width: 1200px;
   // height: 21px;
 }
-.company{
-    width: 121px;
-    height: 36px;
-    font-family: 'Gilroy';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 28px;
-    line-height: 35px;
-    @media (max-width: 382px) {
-      width: 235px;
-      height: 22px;
-      font-size: 18px;
-      line-height: 22px;
-      margin-left: 18px;
-      
+.company {
+  width: 121px;
+  height: 36px;
+  font-family: "Gilroy";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 28px;
+  line-height: 35px;
+  @media (max-width: 382px) {
+    width: 235px;
+    height: 22px;
+    font-size: 18px;
+    line-height: 22px;
+    margin-left: 18px;
   }
 }
