--- a/src/pages/Rewievs/Rewievs.scss
+++ b/src/pages/Rewievs/Rewievs.scss
@@ -1,5 +1,11 @@
 .Rewievs{
     height: 1250px;
+    @media (max-width: 375px) {
+        width: 1075px;
+    }
+    &__row{
+        padding-left: 15px;
+    }
     &__inner__title{
         font-family: 'Gilroy';
         font-style: normal;
@@ -14,11 +20,22 @@
         box-shadow: 0 0 10px black;
         border-radius: 12px;
         margin-top: 40px;
+        @media (max-width: 375px) {
+            width: 340px;
+            height: 253px;
+        }
         &__inner{
             padding: 15px 0 0 55px;
+            @media (max-width: 375px) {
+                padding: 15px 0 0 25px;
+            }
             &__above{
                 padding-bottom: 170px;
                 transform: translateY(50px);
+                @media (max-width: 375px) {
+                    padding-bottom: 45px;
+                    transform: translateY(17px);
+                }
             }
             &__above > h1{
                 font-size: 18px;
@@ -29,10 +46,17 @@
             }
             &__above > p{
                 width: 782px;
+                @media (max-width: 375px) {
+                    width: 300px;
+                }
             }
             &__above > hr{
                 transform: translate(-55px, 85px);
                 width: 1180px;
+                @media (max-width: 375px) {
+                    transform: translate(-26px, 5px);
+                    width: 342px;
+                }
             }
             &__bellow{
                 transform: translateY(-20px);
