--- a/src/pages/Catalog/ProductCard/ProductCard.scss
+++ b/src/pages/Catalog/ProductCard/ProductCard.scss
@@ -195,4 +195,15 @@
     display: flex;
     margin-left: 16px;
   }
+  .filters-bottom-blocks{
+    gap: 11px;
+  }
+  .coffe_news{
+    display: none;
+  }
+  .Rewievs__block__inner__bellow__inner{
+    img{
+      border-radius: 50%;
+    }
+  }
 }
