Fix[header]: closing katalog & add[coffee-items]: almost fixed the grams

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -98,6 +98,11 @@
     background: #ffffff;
     box-shadow: 0px 0px 30px rgba(146, 146, 146, 0.2);
     border-radius: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-bottom: 30px;
+    align-content: space-between;
   }
   .catalog-card_img {
     display: flex;
