--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -78,23 +78,75 @@
 
 .catalog-products {
   height: 700px;
-  margin: 0 20%;
-  width: 900px !important;
-  min-width: 800px;
+  // max-width: 1250px;
+  // margin: auto;
   .catalog-inner > h2 {
     font-size: 35px;
   }
   .catalog-content {
+    // overflow-x: auto;
     display: flex;
-    overflow: hidden;
-    cursor: grab;
   }
   .catalog-items {
     display: flex;
+    @media (max-width: 360px) {
+      display: none;
+    }
     justify-content: center;
     padding-top: 60px;
     margin: auto;
     gap: 20px;
+  }
+  .swiper {
+    display: none;
+    width: 250px;
+    @media (max-width: 380px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-right: 30px;
+      width: 300px;
+    }
+  }
+  .swiper-slide {
+    position: relative;
+    width: 250px;
+    text-align: center;
+    height: 410px;
+    background: #ffffff;
+    box-shadow: 0px 0px 30px rgba(146, 146, 146, 0.2);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 30px;
+    .catalog-card_img {
+      // display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .ct-tea-img {
+      max-width: 250px;
+      max-height: 250px;
+    }
+    .catalog-card_title {
+      text-align: center;
+      padding-top: 28px;
+    }
+    .catalog-card_button {
+      // position: absolute;
+      width: 230px;
+      height: 42px;
+      background-color: #f9b300;
+      font-size: 15px;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+    .catalog-card_button > a {
+      color: white;
+    }
   }
   .catalog-card {
     position: relative;
@@ -109,6 +161,9 @@
     justify-content: center;
     padding-bottom: 30px;
     align-content: space-between;
+    @media (max-width: 420px) {
+      display: none;
+    }
   }
   .catalog-card_img {
     display: flex;
